--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,8 @@
     "vite": "^7.1.7"
   },
   "dependencies": {
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.4"
   }
 }
