--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Vite React app
+name: Deploy the app
 
 on:
   push:
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./my-react-app
+        working-directory: ./app
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
