--- a/app/package.json
+++ b/app/package.json
@@ -15,5 +15,9 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.4"
+  },
+  "overrides": {
+    "rollup": "4.22.4"
   }
+  
 }
