--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.67.0",
+    "@supabase/supabase-js": "^2.39.0",
     "@vitejs/plugin-react": "^5.0.4",
     "html2canvas": "^1.4.1",
     "react": "^19.2.0",
