--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vite-plugin-pwa": "^1.1.0"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.67.0",
