Add SMS notification subscription feature with Twilio integration
Implemented a comprehensive SMS notification system that allows users to subscribe
to real-time crime alerts via text messages.

Features:
- Floating widget button (bottom-left) with pulsing animation
- Phone number subscription modal with validation and formatting
- SMS verification page with 6-digit code input
- Twilio integration via Supabase Edge Function
- Secure credential handling (Twilio secrets in Supabase)
- Rate limiting and code expiry (10 minutes)
- Responsive design for mobile and desktop
- Subscription status tracking and unsubscribe option

Components:
- SMSWidget.jsx: Floating widget component with modal
- SMSVerification.jsx: Verification page with code input
- smsService.js: Backend service functions for SMS operations

Backend:
- Supabase Edge Function (send-sms) for Twilio API calls
- Database table: sms_subscribers (already created)
- E.164 phone number validation
- Verification code generation and expiry

Documentation:
- Comprehensive README with setup instructions
- Edge Function documentation and testing guide
- Environment variable templates

Security:
- Twilio credentials stored as Supabase secrets
- Phone number sanitization and validation
- Rate limiting on resend attempts
- HTTPS for all API calls

--- a/app/.env.example
+++ b/app/.env.example
@@ -1,3 +1,9 @@
 
 VITE_SUPABASE_URL=https://your-project-id.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key-here
+
+# Twilio Configuration (Set these in Supabase Edge Function Secrets, not in .env)
+# These are for reference only - DO NOT set them in the frontend .env file
+# TWILIO_ACCOUNT_SID=your-twilio-account-sid
+# TWILIO_AUTH_TOKEN=your-twilio-auth-token
+# TWILIO_PHONE_NUMBER=your-twilio-phone-number
